<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_title">Login</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="login_body_text">Enter a username and password\nIf you\'re an existing user choose login else select register</string>
    <string name="username_error">Please enter a valid e-mail address</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_body_text">Step right in....</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_body_text">You\'ll be able to add your favorite shoes to a list and keep track of what you\'ve got!\nOn the next screen, just tap the \'plus\' button to get started!</string>
    <string name="continue_button">Continue</string>
    <string name="shoe_overview_title">Shoes</string>
    <string name="fab_description">Add a shoe</string>
    <string name="shoe_detail_title">Add a shoe</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="shoe_list_empty_state">Tap \'Plus\' to get started and add some shoes!</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="shoe_size_label">Size</string>
    <string name="shoe_company_label">Shoe Company</string>
    <string name="shoe_description_label">Shoe description</string>
    <string name="logout_button">Logout</string>
</resources>
