<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.login.LoginFragment">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8EAF6"
        android:paddingStart="@dimen/space_l"
        android:paddingEnd="@dimen/space_l">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_edit_text_layout"
            style="@style/FilledBoxRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            android:autofillHints="username"
            android:hint="@string/username_label"
            android:textAppearance="@style/TextAppearanceEditText"
            app:boxBackgroundColor="#FFFFFF"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:errorEnabled="true"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={loginViewModel.username}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text_layout"
            style="@style/FilledBoxRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            android:autofillHints="Password"
            android:hint="@string/password_label"
            android:textAppearance="@style/TextAppearanceEditText"
            app:boxBackgroundColor="#FFFFFF"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_m"
            android:text="@string/login_button"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            android:text="@string/register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>