<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/space_m"
    android:paddingStart="@dimen/space_m"
    android:paddingEnd="@dimen/space_m">

    <TextView
        android:textAppearance="@style/TextAppearanceTitle"
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoe_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        android:id="@+id/shoe_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="temp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/shoe_name_field"
        android:id="@+id/shoe_size_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="temp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/shoe_size_field"
        android:id="@+id/shoe_company_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="temp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/shoe_company_field"
        android:id="@+id/shoe_description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="temp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>